// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-stylus Stage: build-html / Empty options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / Stylus options #1 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.custom\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "import": [
                "file.js",
                "file2.js",
              ],
              "test": /\\\\\\.custom\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / Stylus options #2 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                {
                  "loader": "@teamsupercell/typings-for-css-modules-loader",
                },
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-html / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / Empty options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / PostCss plugins 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / Stylus options #1 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.custom\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "import": [
                "file.js",
                "file2.js",
              ],
              "test": /\\\\\\.custom\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / Stylus options #2 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                {
                  "loader": "@teamsupercell/typings-for-css-modules-loader",
                },
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: build-javascript / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / Empty options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / PostCss plugins 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / Stylus options #1 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.custom\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "import": [
                "file.js",
                "file2.js",
              ],
              "test": /\\\\\\.custom\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / Stylus options #2 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                {
                  "loader": "@teamsupercell/typings-for-css-modules-loader",
                },
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "miniCssExtract",
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / Empty options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss(["test1"])",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / Stylus options #1 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.custom\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "import": [
                "file.js",
                "file2.js",
              ],
              "test": /\\\\\\.custom\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / Stylus options #2 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                {
                  "loader": "@teamsupercell/typings-for-css-modules-loader",
                },
                "css({"esModule":true,"import":true,"importLoaders":1,"sourceMap":true,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": true,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-stylus Stage: develop-html / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "module": {
          "rules": [
            {
              "exclude": /\\\\\\.module\\\\\\.styl\\$/,
              "test": /\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":false})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
            {
              "test": /\\\\\\.module\\\\\\.styl\\$/,
              "use": [
                "css({"esModule":false,"import":true,"importLoaders":1,"sourceMap":false,"modules":{"namedExport":false,"exportLocalsConvention":"camelCaseOnly"}})",
                "postcss({})",
                {
                  "loader": "stylus-loader",
                  "options": {
                    "sourceMap": false,
                  },
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
